# Modern-CPP

./: .gitignore  blah_class.cpp  car.cpp  fuctions.cpp  hello.cpp  points.cpp  ref.cpp  ref_const.cpp  scouped.cpp  shape  shape.cpp  sum.cpp  test.cpp  vector.cpp
cmake_project/: CMakeLists.txt
cmake_project/src/: CMakeLists.txt  blah.cpp  blah.h  hello.cpp  hello.h  main.cpp
cmake_project/tests/: CMakeLists.txt  test_blah.cpp
homeworks/task_1/: guessing_game.cpp
test_include_files/: main.cpp  test.cpp  test.h
